# bank-of-eng-risk-monitoring

./: .gitignore  README.md  app.py  app_config.py  negative_sentiment.csv  pyproject.toml
ETL_City_Astrid/: .~lock.Q12022.docx#  Bank_Earnings_Sentiment_Topic_Analysis.ipynb  ETL.py  Q22022.docx  Q22024.docx  Q32023.docx  Q42021.docx  Q42023.docx  Q42024.docx  Regulatory_Insight_Analysis.ipynb  transcript_sentences_with_topics.csv
assets/: attribution.txt  custom_script.js  dashAgGridComponentFunctions.js  dashAgGridFunctions.js  style.css
boe_risk_monitoring/: config.py
boe_risk_monitoring/etl_scripts/: etl_classes.py  multithreaded_news_etl.py  multithreaded_presentations_etl.py  multithreaded_transcripts_etl.py  sharepricedataetl.py
boe_risk_monitoring/llms/: base_llm.py  chunking_llm.py  document_analyser_llm.py  processing_llms.py
boe_risk_monitoring/nlp/: Untitled.ipynb  nlp-Q_and_A_Organized.ipynb  nlp.ipynb
boe_risk_monitoring/utils/: utils.py
data/: glossary_dictionary_citigroup.csv
data/aggregated/: all_text.csv  all_text.parquet  news_graphs.csv  news_graphs.parquet  news_text.csv  news_text.parquet  presentation_graphs.csv  presentation_graphs.parquet  presentation_tables.csv  presentation_tables.parquet  presentation_text.csv  presentation_text.parquet  transcripts.csv  transcripts.parquet
data/app/: data_nlp_analysis.csv  data_qa_pairs.csv  data_qa_pairs.parquet  financial_metrics.csv  financial_metrics.parquet  metrics.db  multi_topic_modelling_with_relevance.parquet  multi_topic_modelling_with_relevance_norm.parquet  multi_topic_modelling_with_relevance_quarter_agg.csv  multi_topic_modelling_with_relevance_quarter_agg.parquet  multi_topic_modelling_with_relevance_quarter_agg_norm.csv  multi_topic_modelling_with_relevance_quarter_agg_norm.parquet  multi_topic_modelling_with_relevance_sentiment.parquet  multi_topic_modelling_with_relevance_sentiment_quarter_agg.csv  multi_topic_modelling_with_relevance_sentiment_quarter_agg.parquet  (+7 more)
etl_scripts/: etl_classes.py
llms/: base_llm.py  chunking_llm.py
pages/: insights.py
(+463 files in other folders)
